[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pendle-tracker"
version = "1.0.0"
description = "Track Pendle PT APYs and market data"
authors = [{name = "User"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0"
]

[project.scripts]
pendle-tracker = "pendle_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pendle_tracker*"]